--- a/Contact.html
+++ b/Contact.html
@@ -42,6 +42,9 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" onclick="document.getElementById('navbarNav').classList.toggle('show')">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -52,15 +55,16 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Projects.html">Projects</a>
+
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact.html">Contact</a>
                 </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="https://sg.docworkspace.com/d/sIIP5tI3uAfWUwL0G?sa=601.1123">CV</a>
+                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://sg.docworkspace.com/d/sIIP5tI3uAfWUwL0G?sa=601.1123">CV</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="https://drive.google.com/drive/folders/1nS70K10sGkng88xKYpVT_b1CADmr9HTc">Project vidio 3d</a>
+                    <a class="nav-link" href="https://drive.google.com/drive/folders/1nS70K10sGkng88xKYpVT_b1CADmr9HTc">Project vidio 3d</a>
                 </li>
             </ul>
         </div>
