--- a/Projects.html
+++ b/Projects.html
@@ -55,17 +55,13 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Projects.html">Projects</a>
-
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact.html">Contact</a>
                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link" href="https://sg.docworkspace.com/d/sIIP5tI3uAfWUwL0G?sa=601.1123">CV</a>
-                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://drive.google.com/drive/folders/1nS70K10sGkng88xKYpVT_b1CADmr9HTc">Project vidio 3d</a>
-                </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="https://sg.docworkspace.com/d/sIIP5tI3uAfWUwL0G?sa=601.1123">CV</a>
+              </li>
             </ul>
         </div>
     </div>
@@ -101,20 +97,24 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img src="Project 4.jpg" class="card-img-top" alt="Project Image">
+        <img src="Project figma.png" class="card-img-top" alt="Project Image">
         <div class="card-body">
           <h5 class="card-title">Project 3</h5>
-          <p class="card-text">Diproject ketiga ini saya dan team saya membuat game yang mirip dengan plant vs zombie, degan menggunakan bahasa pemrograman C# dan menggunakan Unity.</p>
+          <p class="card-text">Project ketiga saya membuat web aplikasi Iotani menggunakan figma yang ditugaskan oleh oembimbing magang saya. </p>
          
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img src="Project figma.png" class="card-img-top" alt="Project Image">
+        <img src="Project 3d.png" class="card-img-top" alt="Project Image">
         <div class="card-body">
           <h5 class="card-title">Project 4</h5>
-          <p class="card-text">Project keempat saya membuat web aplikasi Iotani menggunakan figma yang ditugaskan oleh oembimbing magang saya. </p>
+          <p class="card-text">Project keempat saya membuat desain 3d menggunakan aplikasi blender, membuat pemyiram tanaman digital.Berikut link vidio desain 3d
+            <li class="nav-item">
+                <a class="nav-link" href="https://drive.google.com/drive/folders/1nS70K10sGkng88xKYpVT_b1CADmr9HTc">Project vidio 3d</a>
+            </li> </p>
+       
         </div>
       </div>
     </div>
