--- a/index.html
+++ b/index.html
@@ -250,7 +250,10 @@
             <h5 class="card-title">Project 4</h5>
             <p class="card-text">Project keempat saya membuat desain 3d menggunakan aplikasi blender, membuat pemyiram tanaman digital.Berikut link vidio desain 3d
                 <li class="nav-item">
-                    <a class="nav-link" href="https://drive.google.com/drive/folders/1nS70K10sGkng88xKYpVT_b1CADmr9HTc">Project vidio 3d</a>
+                    <a class="nav-link" href="https://drive.google.com/file/d/18ovJ8kQVRnbYmSZ1NWBL6XUv0GiLOGfr/view?usp=drivesdk">Lihat Project</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://drive.google.com/file/d/1nujemsxWM64O7ZeLinm2A8CWTU95ORXp/view?usp=drivesdk">Download</a>
                 </li> </p>
            
           
